frontend/src/_styles/onboarding.scss
//ONBOARD START---------------------------->>>>>
.onboarding-page-wrapper {
    display: flex !important;
    flex-direction: column !important;
    align-items: center;
    justify-content: center;
    width: 392px;
    height: auto;
    margin-top: 68px;
    margin-left: auto;
    margin-right: auto;
    background: #FFFFFF;
    border-radius: 3px;
    display: flex;
    flex-direction: row;
    align-items: center;
    background: #FFFFFF;
}

.info-screen-email-img {
    height: 208px;
    width: 202.69px;
    display: flex;
    margin: 0 auto 32px auto;
}

.onboarding-page-sub-header {
    color: #6B7380;
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
    font-family: 'Roboto';
    text-align: center;
    margin-bottom: 32px;
}

.onboarding-page-header {
    color: #111827;
    font-weight: 400;
    font-size: 32px;
    line-height: 48px;
    margin-bottom: 4px;
    text-align: center;
    white-space: initial;
}

.onboarding-page-continue-button {
    border: none;
    margin-top: 12px;
    height: 40px;
    width: 392px;
    border-radius: 4px;
    padding: 8px 24px;
    background-color: #466BF2;
    display: flex;
    flex-direction: row;
    color: #fff;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    margin: 0 auto;

    p {
        font-weight: 600;
        font-size: 14px;
        line-height: 24px;
    }

    &:hover {
        background: #5F81FF;
        box-shadow: 0px 0px 0px 4px #D2DDFF;
    }

    &:focus {
        background: #3756C5;
        box-shadow: none;
    }

    &:disabled,
    &[disabled] {
        background: linear-gradient(0deg, #F3F4F6, #F3F4F6);
        box-shadow: none;
        color: #D1D5DB;
    }
}

.tj-text-input-error-state {
    font-weight: 400;
    font-size: 11px;
    line-height: 16px;
    margin-top: 2px !important;
    color: #EB1414;
}

.onboarding-radio-checked {
    border: 1px solid #466BF2 !important;
    box-shadow: none;
}

.onboarding-bubbles {
    width: 8px !important;
    height: 8px !important;
    background: #D1D5DB !important;
    margin-right: 8px;
    border-radius: 100%;
}

.onboarding-bubbles-selected {
    width: 8px !important;
    height: 8px !important;
    background: #466BF2 !important;
    margin-right: 8px;
    border-radius: 100%;
}

.onboarding-bubbles-active {
    background: #466BF2 !important;
    width: 16px !important;
    height: 16px !important;
    margin-right: 8px;
    border-radius: 100%;
}

.onboarding-bubbles-completed {
    background: #D1D5DB;
}

.onboarding-bubbles-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.onboarding-progress-cloud {
    margin-bottom: 32px;
    display: flex;
    align-items: center;
}

.onboarding-progress {
    margin-bottom: 32px;
    display: grid;
}

.onboarding-progress-layout-cloud {
    grid-template-columns: 3fr 6fr 3fr;
    margin-bottom: 40px;
    display: grid;
}

.onboarding-progress-layout {
    grid-template-columns: 12fr;
    margin-bottom: 40px;
    display: grid;
}

.onboarding-bubbles-container {
    margin-left: auto;
    margin-right: auto;
}

.onboarding-header-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.onboarding-back-button,
.onboarding-front-button {

    font-size: 12px;
    line-height: 20px;
    color: #6B7380;
    display: flex !important;
    flex-direction: row !important;
    align-items: center;
    cursor: pointer;

    .onboarding-back-text {
        margin-left: 12px;
        color: #D7DBDF;
    }

    p,
    .onboarding-skip-text {
        margin-bottom: 0 !important;
        color: #D7DBDF;
        font-weight: 600;
        font-size: 14px;
    }

    .onboarding-skip-text {
        margin-right: 12px !important;
    }
}

.info-screen-description {
    margin-bottom: 0px !important;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 24px;
    color: #4B5563;
    line-height: 24px;
}

.separator-onboarding,
.separator-signup {
    .separator {
        width: 100%;

        h2 {
            width: 100%;
            text-align: center;
            border-bottom: 1px solid #E4E7EB;
            line-height: 0.1em;
            font-size: 14px;
            margin: 26px 0 26px;
        }

        h2 span {
            color: #9BA3AF;
            background: #fff;
            padding: 0 18px;
        }
    }
}

// login ,signin
.separator-signup {
    .separator {
        width: 100%;

        h2 {
            margin: 36px 0 36px !important;
        }
    }
}


.common-auth-section-whole-wrapper {
    display: flex;
    flex-direction: row;

    .common-auth-section-right-wrapper {
        width: 29.16%;
        border-left: 1px solid #E4E7EB;
        overflow: hidden;
    }

    .common-auth-section-left-wrapper {
        width: 100%;
        position: relative;

        .common-auth-section-left-wrapper-grid {
            display: grid;
            height: calc(100% - 64px);

            form {
                display: flex !important;
                justify-content: center;
                align-items: center !important;
            }
        }

    }

    .common-auth-container-wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 352px;
        margin: 0px auto 0px auto;
    }

    .login-sso-wrapper {
        padding: 6px 16px;
        gap: 5px;
        width: 352px;
        height: 40px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        margin-bottom: 12px;
        background: #FFFFFF;
        border: 1px solid #D1D5DB;
        border-radius: 4px;

        &:hover {
            border: 1px solid #D1D5DB;
            box-shadow: 0px 0px 0px 4px #E4E7EB;
        }
    }
}

.sso-info-text {
    font-weight: 600;
    font-size: 14px;
    line-height: 24px;
    margin-left: 11px;
}
/* ... */

